Add MO workflow and insights integration